modified most html files and css to try to rectify some bugs with overflow - fixed all but on the index.html page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@
 
 /*------------------------------------------------------------------------------------------------------------------------ Nav */
 
+* {
+    box-shadow: 0 0 0 1px red;
+}
+
 header {
     height: 112px;
 }
@@ -43,8 +47,9 @@ header {
     color: #3373b0 !important;
 }
 
-.site-nav-current {
-    color: #0b385f;
+.site-active {
+    color: #0b385f !important; 
+    text-decoration: underline;
 }
 
 
@@ -136,16 +141,6 @@ header {
     line-height: 1.5;
 }
 
-.site-col-md-4 {    
-    padding: 0;
-    max-width: 90%;
-}
-
-.site-col-md-8 {    
-    padding: 0;
-    max-width: 90%;
-}
-
 .site-p-contact:hover {
     text-decoration: underline;
 }
@@ -158,7 +153,8 @@ header {
 
 .club-row {
     padding: 0;
-    width: 100%;
+    align-items: center;
+    text-align: center;
 }
 
 /*------------------------------------------------------------------------------------------------------------------------ Contact */
@@ -208,6 +204,9 @@ header {
 
 footer {
     background-color: #e7f1fb;
+    width: 100%;
+    /*had a weird overflow bug that I couldnt locate the cause of, googling suggested to use overflow hidden to 'fix'*/
+    overflow-x: hidden; 
 }
 
 .site-footer {
@@ -227,7 +226,23 @@ footer {
     padding-right: 20px;
 }
 
-@media (max-width:768px) {
+.site-socials {
+    padding: 0;
+        margin-top: 10px;
+    }
+
+@media (max-width: 768px) {
+    .site-socials {
+        justify-content: center;
+        flex-wrap: wrap;
+        padding: 0; 
+    }
+
+    .site-footer-link {
+        font-size: 20px; 
+        margin-right: 5px;
+    }
+
     .container-fluid.site-footer {
         margin: 0;
         padding: 0;
@@ -241,12 +256,13 @@ footer {
         margin-right: auto;
         text-align: center;
     }   
-    
-.site-socials {
-    padding: 0;
-        margin-top: 10px;
+
+    .modal-dialog {
+        max-width: 100%;  
+        margin: 10px; 
     }
 }
+
 
 /*------------------------------------------------------------------------------------------------------------------------ Modal */
 
@@ -284,7 +300,6 @@ footer {
 
 
 /*------------------------------------------------------------------------------------------------------------------------ Global */
-
 h3, h4, h5, h6 {
     font-family: "Barlow", sans-serif;
 }
@@ -324,6 +339,7 @@ img {
     margin: 0;
 }
 
+
 #hero-image{
     height:500px;
     width: 100%;
@@ -349,6 +365,7 @@ img {
     left: 40px;
     position: absolute;
 }
+
 /* Adjust for smallest screens to avoid odd rendering issues with the hero text */
 @media (max-width:280px) {
     #hero-text {
@@ -358,11 +375,6 @@ img {
         width: 200px;
 
     }
-}
-
-.site-hero-container h2 {
-    color: #1c2127;
-    text-align: center;
 }
 
 .site-hero-container {
@@ -380,18 +392,24 @@ img {
     }
 }
 
+
 .site-content {
     padding-top: 20px;
     max-width: 2048px;
 }
 
+.site-col {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 .site-content-col {
-    padding: 10px;
-    margin: 20px;
-    overflow-y: auto;
+    padding: 15px;
     background-color: #e7f1fb;
     border-radius: 25px;
+
 }
+
 
 .site-content-col img {
     height: auto;
